--- a/config.env
+++ b/config.env
@@ -1,4 +1,6 @@
 NODE_ENV = development
 PORT=3000
 USERNAME = jonas
-PASSWORD=12344
+DATABASE_PASSWORD = tomaz
+DATABASE = mongodb+srv://tomaz:<PASSWORD>@cluster0.nygzy.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_LOCAL = mongodb://localhost:27017/natours
