--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^5.12.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
-    "slugify": "^1.5.0"
+    "slugify": "^1.5.0",
+    "validator": "^13.5.2"
   },
   "engines": {
     "node": ">=10.0.0"
