added the JWT Token

--- a/config.env
+++ b/config.env
@@ -4,3 +4,6 @@ USERNAME = jonas
 DATABASE_PASSWORD = tomaz
 DATABASE = mongodb+srv://tomaz:<PASSWORD>@cluster0.nygzy.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_LOCAL = mongodb://localhost:27017/natours
+
+JWT_SECRET = my-secure-and-long-jwt-secret-for-the-web-app-with-auth
+JWT_EXPIRES_IN = 90d
