--- a/config.env
+++ b/config.env
@@ -7,3 +7,8 @@ DATABASE_LOCAL = mongodb://localhost:27017/natours
 
 JWT_SECRET = my-secure-and-long-jwt-secret-for-the-web-app-with-auth
 JWT_EXPIRES_IN = 90d
+
+EMAL_USERNAME=0be268ca2d57c7
+EMAIL_PASSWORD = fce09ba775a59a
+EMAI_HOST = smtp.mailtrap.io
+EMAIL_PORT = 2525
