--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7",
     "slugify": "^1.5.0",
     "validator": "^13.5.2"
