--- a/config.env
+++ b/config.env
@@ -15,3 +15,6 @@ EMAI_HOST = smtp.mailtrap.io
 EMAIL_PORT = 2525
 
 EMAIL_FROM = hello@jonas.io
+
+SENDGRID_USERNAME=apikey
+SENDGRID_PASSWORD=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
